# qlicS

./: .coverage  .flake8  <built-in function dir>config.ini  LICENSE  README.md  noxfile.py  output.csv  pyproject.toml  timestep_values.txt
M-LOOP_archives/: controller_archive_2024-07-22_09-17.txt  controller_archive_2024-07-22_17-23.txt  controller_archive_2024-07-22_17-27.txt  controller_archive_2024-07-22_17-32.txt  controller_archive_2024-10-04_20-51.txt  controller_archive_2024-10-04_21-03.txt  learner_archive_2024-07-22_09-17.txt
M-LOOP_logs/: log.txt
batch_examples/chemical_reaction/: o2_dissociation_0o.ini  o2_dissociation_10o.ini  o2_dissociation_1o.ini  o2_dissociation_2o.ini  o2_dissociation_3o.ini  o2_dissociation_4o.ini  o2_dissociation_5o.ini  o2_dissociation_6o.ini  o2_dissociation_7o.ini  o2_dissociation_8o.ini  o2_dissociation_9o.ini
batch_examples/various_num_o2_crh/: 10o2.ini  11o2.ini  12o2.ini  13o2.ini  14o2.ini  15o2.ini  16o2.ini  1o2.ini  2o2.ini  3o2.ini  4o2.ini  5o2.ini  6o2.ini  7o2.ini  8o2.ini  9o2.ini
data/2024-06-18_17-11-12/: positions.txt  secv.txt  test.lammps
data/2024-06-26_22-09-05/: config.ini  test.lammps
data/2024-06-27_12-46-20/: config.ini  test.lammps
data/2024-06-28_15-56-39/: config.ini  test.lammps
data/2024-06-28_15-56-59/: config.ini  test.lammps
data/2024-06-28_15-57-22/: config.ini  test.lammps
data/2024-06-28_15-58-26/: config.ini  test.lammps
data/2024-06-28_16-05-05/: config.ini  test.lammps
data/2024-06-28_16-05-22/: config.ini  test.lammps
data/2024-06-28_16-06-49/: config.ini  test.lammps
data/2024-06-28_16-07-09/: config.ini  test.lammps
data/2024-06-28_16-07-48/: config.ini  test.lammps
data/2024-06-28_16-10-10/: config.ini  test.lammps
data/2024-06-28_16-15-00/: config.ini  test.lammps
data/2024-06-28_16-16-25/: config.ini  test.lammps
data/2024-06-28_22-41-13/: config.ini  test.lammps
data/2024-06-28_22-52-17/: config.ini  test.lammps
data/2024-06-28_22-57-16/: config.ini  test.lammps
data/2024-06-28_23-04-49/: config.ini  test.lammps
data/2024-06-28_23-05-57/: config.ini  test.lammps
docs/: conf.py  index.rst  reference.rst
docs/_build/: .buildinfo  (+8 more)
examples/: 1_be_damp_drive.ini  1_be_damp_test.ini  3_be_freeze_positions.ini  cloud_excitation.ini  co_trap_chirp.ini  co_trap_optimization1.ini  config.ini  cotrap_symp_cool.ini  frohlich_etal_deformation.ini  iteration_example.ini  laser_cooling_thermal_test.ini  mass_selective_pruneing.ini  pure_be_chirp.ini  static_efield.ini  tof-ms.ini  trap.ini  trap_cool_tickle.ini  trap_timestep_changing.ini
src/: data_extract.py
tests/: resources.py  test_analysis.py  test_cl_console.py  test_console_full_sim.py  test_exp_sequence_controller.py  test_ion_creation.py  test_iterative_expander.py  test_lasercooling.py  test_pylion.py  test_scattering.py  test_sim_dynamics.py  test_tickle.py  test_time_controller.py  test_trap.py
(+221 files in other folders)
