[tool.poetry]
name = "qlics"
version = "0.1.0"
description = "Quantum Logic Ion Control Simulator"
authors = ["mmitch12202 <mmitchell24@amherst.edu>", "Michael Mitchell <michaelmitchell12202@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/mmitch12202/qlicS"
repository = "https://github.com/mmitch12202/qlicS"
keywords = ["LAMMPS", "Ion Trap", "Linear Paul Trap"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"

h5py = "2.10.0"
jinja2 = "2.10.3"
markupsafe = "2.0.1"
termcolor = "^2.4.0"
numpy = "1.23.0"
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

pytest-mock = "^3.14.0"
mock = "^5.1.0"
coverage = {extras = ["toml"], version = "^7.5.4"}
pytest-cov = "^5.0.0"
isort = "^5.13.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qlicS = "qlicS.cl_console:main"
setup_test = "qlicS.config_controller:setup_sequence"